# graphql-server

./: Cargo.toml  LICENSE  README.md
src/: README.md  main.rs
src/schema/: health_check.rs  mod.rs
src/server/: mod.rs  routes.rs
