[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

// logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

// async
tokio = { version = "1.16.1", features = ["full"] }

// Web
warp = "0.3.2"
